Fix keyvisual on small devices

--- a/src/less/_keyvisual.less
+++ b/src/less/_keyvisual.less
@@ -113,6 +113,16 @@
       flex-direction: column;
     }
 
+    &-image {
+      width: initial;
+      height: initial;
+
+      > img {
+        width: initial;
+        height: initial;
+      }
+    }
+
     &-title {
       max-width: initial;
     }
